Archive2/f3/2fcf90141253af/output
main.cpp: In instantiation of 'void f() [with T = int [4]]':
main.cpp:24:20:   required from here
main.cpp:13:27: error: too many initializers for 'int [4]'
     T x = { 1, 2, 3, 4, 5 };
                           ^
